Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -173,7 +173,7 @@
    "source": [
     "city_keys = greenville.keys()\n",
     "city_keys # ['Area', 'City', 'Country', 'Population']\n",
-    "\n"
+    "list(city_)\n"
    ]
   },
   {
