Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -201,7 +201,7 @@
    ],
    "source": [
     "city_values = greenville.values()\n",
-    "city_values # [68, 'Greenville', 'USA', 93]"
+    "list(city_values # [68, 'Greenville', 'USA', 93]"
    ]
   },
   {
