--- a/index.ipynb
+++ b/index.ipynb
@@ -185,23 +185,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "dict_values([68, 'Greenville', 'USA', 93])"
+       "[68, 'Greenville', 'USA', 93]"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "city_values = greenville.values()\n",
-    "list(city_values # [68, 'Greenville', 'USA', 93]"
+    "list(city_values) # [68, 'Greenville', 'USA', 93]"
    ]
   },
   {
