Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -356,22 +356,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "{'City': 'Salina Island', 'Country': 'Italy', 'Population': 3, 'Area': 26}"
-      ]
-     },
-     "execution_count": 14,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "salina= "
+    "salina= cities[-3]"
    ]
   },
   {
