Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -356,11 +356,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'City': 'Salina Island', 'Country': 'Italy', 'Population': 3, 'Area': 26}"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "salina= cities[-3]"
+    "salina= cities[-3]\n",
+    "salina"
    ]
   },
   {
