Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -420,7 +420,9 @@
      "output_type": "execute_result"
     }
    ],
-   "source": []
+   "source": [
+    "los_cabos_pop = cities"
+   ]
   },
   {
    "cell_type": "code",
