Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -406,22 +406,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 10,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "288"
-      ]
-     },
-     "execution_count": 19,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "los_cabos_pop = cities[4]['Population']"
+    "los_cabos_pop = cities[4]['Population']\n",
+    "los_cabos_pop"
    ]
   },
   {
