Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -455,22 +455,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 12,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "12"
-      ]
-     },
-     "execution_count": 23,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "city_county = citi"
+    "city_county = len(cities)\n",
+    "c"
    ]
   },
   {
