--- a/index.ipynb
+++ b/index.ipynb
@@ -455,12 +455,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 14,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "12"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "city_county = len(cities)\n",
-    "c"
+    "city_count = len(cities)\n",
+    "city_count"
    ]
   },
   {
