--- a/index.ipynb
+++ b/index.ipynb
@@ -509,7 +509,9 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "cities"
+   ]
   },
   {
    "cell_type": "code",
