--- a/index.ipynb
+++ b/index.ipynb
@@ -506,11 +506,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'City': 'Pyeongchang',\n",
+       " 'Country': 'South Korea',\n",
+       " 'Population': 44,\n",
+       " 'Area': 1464}"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "cities[9]"
+    "cities[7]"
    ]
   },
   {
