--- a/index.ipynb
+++ b/index.ipynb
@@ -506,25 +506,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 17,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "{'City': 'Pyeongchang',\n",
-       " 'Country': 'South Korea',\n",
-       " 'Population': 44,\n",
-       " 'Area': 1464}"
-      ]
-     },
-     "execution_count": 16,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "cities[7]['City'] = "
+    "cities[7]['City'] = 'PyeongChang'"
    ]
   },
   {
