--- a/index.ipynb
+++ b/index.ipynb
@@ -582,7 +582,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "pyeongchang_values = Non\n",
+    "pyeongchang_values = cities.\n",
     "\n",
     "pyeongchang_values # ['PyeongChang', 'South Korea', 44, 1464]"
    ]
