--- a/index.ipynb
+++ b/index.ipynb
@@ -578,24 +578,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "dict_values(['PyeongChang', 'South Korea', 44, 1464])"
-      ]
-     },
-     "execution_count": 21,
-     "metadata": {},
-     "output_type": "execute_result"
+     "ename": "SyntaxError",
+     "evalue": "unexpected EOF while parsing (<ipython-input-22-a97532f4bc8d>, line 3)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-22-a97532f4bc8d>\"\u001b[0;36m, line \u001b[0;32m3\u001b[0m\n\u001b[0;31m    list(pyeongchang_values # ['PyeongChang', 'South Korea', 44, 1464])\u001b[0m\n\u001b[0m                                                                       ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m unexpected EOF while parsing\n"
+     ]
     }
    ],
    "source": [
     "pyeongchang_values = cities[7].values()\n",
     "\n",
-    "pyeongchang_values # ['PyeongChang', 'South Korea', 44, 1464]"
+    "list(pyeongchang_values # ['PyeongChang', 'South Korea', 44, 1464])"
    ]
   },
   {
