Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -600,42 +600,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 28,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "['PyeongChang', 'South Korea', 44, 1464]"
-      ]
-     },
-     "execution_count": 26,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "list=list(pyeongchang_values)"
+    "list =list(pyeongchang_values)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "dict_values"
+       "list"
       ]
      },
-     "execution_count": 27,
+     "execution_count": 29,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "type(pyeongchang_values)"
+    "type(list)"
    ]
   },
   {
