Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -636,24 +636,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "['City', 'Country', 'Population', 'Area']"
+       "dict_keys(['City', 'Country', 'Population', 'Area'])"
       ]
      },
-     "execution_count": 40,
+     "execution_count": 30,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "pyeongchang_keys = list(cities[7].keys())\n",
+    "pyeongchang_keys = cities[7].keys()\n",
     "\n",
-    "pyeongchang_keys # ['City', 'Country', 'Population', 'Area']"
+    "list(pyeongchang_keys )# ['City', 'Country', 'Population', 'Area']"
    ]
   },
   {
