Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -636,7 +636,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [
     {
@@ -645,7 +645,7 @@
        "dict_keys(['City', 'Country', 'Population', 'Area'])"
       ]
      },
-     "execution_count": 30,
+     "execution_count": 33,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -653,7 +653,7 @@
    "source": [
     "pyeongchang_keys = cities[7].keys()\n",
     "\n",
-    "list(pyeongchang_keys )# ['City', 'Country', 'Population', 'Area']"
+    "list(pyeongchang_keys # ['City', 'Country', 'Population', 'Area']"
    ]
   },
   {
