Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -653,6 +653,7 @@
    ],
    "source": [
     "pyeongchang_keys = list(cities[7].keys())\n",
+    "                    list(cities[7].keys())\n",
     "\n",
     "pyeongchang_keys # ['City', 'Country', 'Population', 'Area']"
    ]
